Fix: CSS header banner z-index

--- a/src/Chamilo/Configuration/Resources/Css/Ruby/Header.css
+++ b/src/Chamilo/Configuration/Resources/Css/Ruby/Header.css
@@ -25,6 +25,7 @@
 	padding: 0px 10px;
 	height: 50px;
 	width: 84px;
+	z-index: 2000;
 }
 
 #header1 div.banner span.logo {
